# claude-memory-cloud

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: deploy.yml  release.yml
cdk/: cdk.json  package.json  pnpm-lock.yaml  tsconfig.json
cdk/lib/: claude-memory-stack.ts
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/handlers/: mod.rs  sessions.rs  transcripts.rs  turns.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  log.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: auth.rs  config.rs  crypto.rs  db.rs  dcr.rs  embedding.rs  error.rs  lib.rs  models.rs  secrets.rs  transcript.rs  types.rs  uri.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs  tools.rs
crates/oauth-metadata/: Cargo.toml
crates/oauth-metadata/src/: main.rs
crates/oauth-proxy/: Cargo.toml
crates/oauth-proxy/src/: main.rs  response.rs  routes.rs
crates/oauth-proxy/src/handlers/: authorize.rs  callback.rs  mod.rs  register.rs  token.rs
crates/parser/: Cargo.toml
crates/parser/src/: main.rs
crates/transcript/: Cargo.toml  SCHEMA.md
crates/transcript/src/: lib.rs
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: check-setup.sh  stop.sh
plugin/skills/recall/: SKILL.md
plugin/skills/shares/: SKILL.md
plugin/skills/transcript/: SKILL.md
