[workspace]
members = ["crates/api", "crates/cli", "crates/parser", "crates/transcript"]
resolver = "3"

[workspace.package]
version = "0.2.3"
edition = "2024"

[workspace.dependencies]
# HTTP
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Lambda
lambda_http = "0.13"

# AWS SDK
aws-sdk-secretsmanager = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-s3 = "1"
aws-config = "1"

# DB
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "migrate"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# MCP
rmcp = { version = "0.16", features = ["server", "macros", "transport-streamable-http-server"] }

# Crypto (for oauth crates)
aes-gcm = "0.10"
scrypt = "0.11"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"

# Encoding
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Error handling
thiserror = "2"

# Async
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL
url = "2"
