[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
claude-memory-common = { path = "../common" }
axum = { workspace = true, features = ["json", "query"] }
lambda_http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
pgvector.workspace = true
aws-sdk-secretsmanager.workspace = true
aws-sdk-bedrockruntime.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
chrono.workspace = true
