[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true, features = ["json"] }
lambda_http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-bedrockagentruntime = "1"
aws-config.workspace = true
