[package]
name = "claude-memory-common"
version.workspace = true
edition.workspace = true

[dependencies]
# Crypto (for OAuth)
aes-gcm.workspace = true
scrypt.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
base64.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# URL
url.workspace = true

# AWS SDK
aws-sdk-secretsmanager.workspace = true
aws-sdk-cognitoidentityprovider.workspace = true
aws-config.workspace = true

# DB
sqlx.workspace = true
pgvector.workspace = true

# AWS SDK (additional)
aws-sdk-bedrockruntime.workspace = true
aws-sdk-s3.workspace = true

# Time
chrono.workspace = true

# Async
tokio = { workspace = true, features = ["sync"] }
