[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true

[dependencies]
claude-memory-common = { path = "../common" }
rmcp.workspace = true
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
lambda_http.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
pgvector.workspace = true
aws-sdk-secretsmanager.workspace = true
aws-sdk-bedrockruntime.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
futures.workspace = true
chrono.workspace = true
