[package]
name = "oauth-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
claude-memory-common = { path = "../common" }
axum.workspace = true
lambda_http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aws-sdk-secretsmanager.workspace = true
aws-sdk-cognitoidentityprovider.workspace = true
aws-config.workspace = true
base64.workspace = true
serde_urlencoded = "0.7"
urlencoding = "2"
